@startuml
title __REPOSITORY's Class Diagram__\n

  package  {
    package Repository {
      abstract class AbstractRepo {
          - validator : Validator<E>
          - repo : Map<ID, E>
          + AbstractRepo()
          + save()
          + findOne()
          + update()
          + delete()
          + size()
          + findAll()
      }
    }
  }


  package  {
    package Repository {
      interface CrudRepo {
          {abstract} + save()
          {abstract} + update()
          {abstract} + delete()
          {abstract} + findOne()
          {abstract} + findAll()
          {abstract} + size()
      }
    }
  }


  package  {
    package Repository {
      class NoteRepo {
          - builderFactory : DocumentBuilderFactory
          + NoteRepo()
          - writeToFile()
          - writeToFile2()
          + save()
      }
    }
  }


  package  {
    package Repository {
      class StudentRepo {
          - fName : String
          - builderFactory : DocumentBuilderFactory
          + StudentRepo()
          + loadFromFile()
          - writeToFile()
          + save()
          + delete()
          + update()
      }
    }
  }


  package  {
    package Repository {
      class TemeRepo {
          - fName : String
          - builderFactory : DocumentBuilderFactory
          + TemeRepo()
          + loadFromFile()
          - writeToFile()
          + save()
          + delete()
          + update()
      }
    }
  }


  AbstractRepo -up-|> CrudRepo
  NoteRepo -up-|> AbstractRepo
  StudentRepo -up-|> AbstractRepo
  TemeRepo -up-|> AbstractRepo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter
@enduml
